# norm-database

./: .gitignore  CMakeLists.txt  Package.toml  README.md  build.ps1  norm_database.meta.lua
examples/: usage.lua
lua/: norm_adapter.lua
src/: connection.cpp  connection.hpp  database.cpp  database.hpp  dbtypes.hpp  module.cpp  mysql_backend.cpp  sqlite_backend.cpp
